<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/spacerBar"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/accent_1" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name" />

    <HorizontalScrollView
        android:id="@+id/tabBar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/accent_1"
        android:orientation="horizontal"
        android:scrollbars="none"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/systemTabBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#33b5e5"
                android:onClick="onTabBtnClick"
                android:text="@string/system"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/accelerationTabBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#33b5e5"
                android:onClick="onTabBtnClick"
                android:text="@string/mAcc"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/angularVelocityTabBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#33b5e5"
                android:onClick="onTabBtnClick"
                android:text="@string/mAngleVelocity"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/angleTabBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0099cc"
                android:onClick="onTabBtnClick"
                android:text="@string/mAngle"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/magneticFieldTabBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#33b5e5"
                android:onClick="onTabBtnClick"
                android:text="@string/mMag"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>
    </HorizontalScrollView>


    <ScrollView
        android:id="@+id/dataArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/dataSwitch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginRight="20dp"
                android:checked="true"
                android:gravity="right|center_vertical"
                android:onClick="onOutputSwitchClick"
                android:text="@string/data_output" />

            <include
                android:id="@+id/mLayout"
                layout="@layout/lay_bt_graph"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </LinearLayout>
    </ScrollView>

    <info.deconinck.inclinometer.view.InclinometerView
        android:id="@+id/inclinometer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv_layout"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <include layout="@layout/lay_draw"></include>

</com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>